Instructions for javafx